[gd_scene load_steps=9 format=3 uid="uid://ca0k4b3a1bbdg"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_p2oma"]
[ext_resource type="Texture2D" uid="uid://bp5bfbxxd02yq" path="res://images/background.png" id="3_2s5ef"]
[ext_resource type="PackedScene" uid="uid://bp0o1aidsgw5a" path="res://prefabs/card.tscn" id="3_iwgg3"]
[ext_resource type="AudioStream" uid="uid://bhukwyc4blko3" path="res://sounds/cardSlide8.ogg" id="4_4r5a8"]
[ext_resource type="AudioStream" uid="uid://vl5s3rkdgj64" path="res://sounds/cardPlace1.ogg" id="5_mdjnn"]
[ext_resource type="AudioStream" uid="uid://cht2gbscl2bc6" path="res://sounds/cardFan1.ogg" id="6_i5tfh"]
[ext_resource type="AudioStream" uid="uid://dxosc1b3c82jg" path="res://sounds/cardPlace2.ogg" id="7_jlw16"]
[ext_resource type="Script" path="res://scripts/quitter.gd" id="8_fb3wo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_p2oma")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_2s5ef")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="BottomRow" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -179.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Draw" type="Control" parent="HUD/BottomRow"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 131.0
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HUD/BottomRow/Draw"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.478431, 0.737255)

[node name="DrawCount" type="Label" parent="HUD/BottomRow/Draw"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="HUD/BottomRow/Draw"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Draw/Control"]
scale = Vector2(0.756055, 0.756055)

[node name="Card" parent="HUD/BottomRow/Draw/Control/Marker2D" instance=ExtResource("3_iwgg3")]

[node name="Discard" type="Control" parent="HUD/BottomRow"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -129.0
grow_horizontal = 0
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HUD/BottomRow/Discard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.478431, 0.737255)

[node name="DiscardCount" type="Label" parent="HUD/BottomRow/Discard"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="HUD/BottomRow/Discard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Discard/Control"]
scale = Vector2(0.756055, 0.756055)

[node name="Card" parent="HUD/BottomRow/Discard/Control/Marker2D" instance=ExtResource("3_iwgg3")]

[node name="Energy" type="Control" parent="HUD/BottomRow"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_right = -143.0
grow_horizontal = 0
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HUD/BottomRow/Energy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.313726, 0.478431, 0.737255)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/BottomRow/Energy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 11.0
offset_right = -8.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnergyCount" type="Label" parent="HUD/BottomRow/Energy/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "3âš¡
0ðŸª™"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="HUD/BottomRow/Energy/VBoxContainer"]
custom_minimum_size = Vector2(0, 18.625)
layout_mode = 2

[node name="EndTurn" type="Button" parent="HUD/BottomRow/Energy/VBoxContainer"]
layout_mode = 2
text = "End Turn"

[node name="Hand" type="HBoxContainer" parent="HUD/BottomRow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 143.0
offset_right = -284.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="1" type="Control" parent="HUD/BottomRow/Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="HUD/BottomRow/Hand/1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Hand/1/Control"]

[node name="2" type="Control" parent="HUD/BottomRow/Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="HUD/BottomRow/Hand/2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Hand/2/Control"]

[node name="3" type="Control" parent="HUD/BottomRow/Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="HUD/BottomRow/Hand/3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Hand/3/Control"]

[node name="4" type="Control" parent="HUD/BottomRow/Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="HUD/BottomRow/Hand/4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Hand/4/Control"]

[node name="5" type="Control" parent="HUD/BottomRow/Hand"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control" type="Control" parent="HUD/BottomRow/Hand/5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/BottomRow/Hand/5/Control"]

[node name="InPlay" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Marker2D" type="Marker2D" parent="HUD/InPlay"]

[node name="DrawSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4r5a8")
max_polyphony = 4

[node name="PlaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mdjnn")
max_polyphony = 4

[node name="ReshuffleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_i5tfh")
max_polyphony = 4

[node name="DiscardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jlw16")
max_polyphony = 4

[node name="Quitter" type="Node" parent="."]
script = ExtResource("8_fb3wo")
quit_action = "quit"

[connection signal="picked" from="HUD/BottomRow/Draw/Control/Marker2D/Card" to="." method="_on_draw_pile_picked"]
[connection signal="picked" from="HUD/BottomRow/Discard/Control/Marker2D/Card" to="." method="_on_draw_pile_picked"]
[connection signal="pressed" from="HUD/BottomRow/Energy/VBoxContainer/EndTurn" to="." method="_on_end_turn_pressed"]
